4539 _t_checkfd() should not call find_tilink() if force_sync is set